unpackaged/main/default/objects/DuplicateRecordSet/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Duplicate Record Sets</relationshipLabel>
    <relationshipName>Duplicate_Record_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>