unpackaged/main/default/objects/DuplicateRecordSet/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Duplicate Record Sets</relationshipLabel>
    <relationshipName>Duplicate_Record_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>