unpackaged/main/default/objects/DuplicateRecordSet/listViews/Project_27_02_2020_10_26_AM.listView-meta.xml
<ListView>
    <fullName>Project_27_02_2020_10_26_AM</fullName>
    <columns>Name</columns>
    <columns>RecordCount</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent</field>
        <operation>equals</operation>
        <value>Project 27/02/2020 10:26 AM</value>
    </filters>
    <label>Project 27/02/2020 10:26 AM</label>
</ListView>